# agentgen

./: .env.example  .gitignore  .gitmodules  AGENT_BEST_PRACTICES.md  CLAUDE.md  CLAUDE_DESKTOP.md  CLAUDE_DESKTOP_ARCHITECTURE.md  CLAUDE_DESKTOP_DEVELOPMENT.md  CLAUDE_DESKTOP_ENHANCEMENTS.md  CLAUDE_DESKTOP_EXECUTIVE.md  CLAUDE_DESKTOP_QUICK_REFERENCE.md  CLAUDE_DESKTOP_TROUBLESHOOTING.md  CMD_AGENT_SELECT_LOGIC_API_REFERENCE.md  CMD_AGENT_SELECT_LOGIC_USER_GUIDE.md  COMPLETION_README.md  COMPLETION_SETUP_GUIDE.md  ENHANCEMENT_SUCCESS_METRICS.json  EXAMPLE_PHP_STRUCTURE.md  GLOBAL_AGENTS_SETUP.md  INSTALL_AGENTS_HELP.md  INSTALL_AGENTS_QUICK_START.md  INSTALL_AGENTS_USER_GUIDE.md  MIGRATION_TASK_TRACKER.md  Makefile  PHP_TO_NODEJS_MIGRATION_PLAN.md  PROFILE_MIGRATION_GUIDE.md  PROJECT_STATUS.md  QUICK_START.md  README.md  SIMPLE_AGENTS.md  TEST_FAILURE_ANALYSIS.md  TEST_SUITE_README.md  UV_WRAPPER_SUMMARY.md  ValidatedForm.css  ValidatedForm.jsx  WebSocketProvider.tsx  WebSocketStream.module.css  WebSocketStream.tsx  agentgen.code-workspace  comprehensive_test_results.md  (+28 more)
.claude/: settings.json
agentgen/: __init__.py  cli.py  core.py  utils.py
agents/: README.md
archive/: agents
cmd-agent-select-logic/: PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE2_IMPLEMENTATION_SUMMARY.md  requirements.txt  run_phase2_tests.py  run_tests.py  validate_phase2.py
config/: agent-builder.yaml
deprecated/: DEPLOYMENT_GUIDE.md  FINAL_AGENT_TESTING_REPORT.md  accessibility-specialist.md  ai-engineer.md  api-documenter.md  backend-architect.md  backend-typescript-architect.md  (+63 more)
(+344 files in other folders)
